package com.mnowo.surveyapp.common

object TestTags {

    const val LOGIN_SCREEN_TEXT_BUTTON = "LOGIN_SCREEN_TEXT_BUTTON"
    const val LOGIN_EMAIL = "login_email"
    const val LOGIN_PASSWORD = "login_password"
    const val LOGIN_BUTTON = "login_button"
    const val LOGIN_PROGRESSBAR = "login_progressbar"
}